--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-canvas-confetti": "^1.2.1",
+    "react-confetti": "^6.0.1",
+    "react-dom": "^17.0.2",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0"
