--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-canvas-confetti": "^1.2.1",
     "react-confetti": "^6.0.1",
+    "react-confetti-explosion": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-use": "^17.3.2"
   },
